--- a/src/css/components/MobileMenu.less
+++ b/src/css/components/MobileMenu.less
@@ -61,7 +61,9 @@
 
     /* Color/shape of burger icon bars */
     .bm-burger-bars {
-        background: transparent;
+        // background: transparent;
+        background: @gray-50;
+        height: 10% !important;
 
         &::after {
             content: '';
@@ -71,7 +73,7 @@
             height: 0;
             top: -8px;
             right: 0;
-            box-shadow: 0 10px 0 1px @gray-50;
+            // box-shadow: 0 10px 0 1px @gray-50;
         }
     }
 
